--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+  <body>
 • Consumer Concept - A dummy Project
   =================
 Create a play application using Scala and Anorm, with a Customer concept, 
@@ -48,3 +50,5 @@ and some suitable methods like create customer purchase history or customer with
   ======
 
 - build.sbt
+</body>
+    </html>
